Wrong alpha with bilateral blur node #43894

Closed
opened 2015-03-05 03:29:16 +01:00 by JA 12 · 8 comments

Ubuntu 14.04 64-bit, Gnome 3 Classic, nVidia graphics.

Broken: 2.73.9 85c38e7
Worked: 2.73a bbf09d9, 2.73.9 85c38e7 when using multilayer .exr instead of render layer node.

Bilateral blur node shows completely transparent result bilateral_problem_2.73.9.png but disabling alpha either on viewer node or in the uv/image editor shows the result. When using multilayer openexr file as input instead of render layer node, the output is as expected bilateral_problem_2.73.9_with_exr.png

Worked with 2.73a bilateral_problem_2.73a.png

Steps for others to reproduce the error:

Ubuntu 14.04 64-bit, Gnome 3 Classic, nVidia graphics. Broken: 2.73.9 85c38e7 Worked: 2.73a bbf09d9, 2.73.9 85c38e7 when using multilayer .exr instead of render layer node. Bilateral blur node shows completely transparent result ![bilateral_problem_2.73.9.png](https://archive.blender.org/developer/F147353/bilateral_problem_2.73.9.png) but disabling alpha either on viewer node or in the uv/image editor shows the result. When using multilayer openexr file as input instead of render layer node, the output is as expected ![bilateral_problem_2.73.9_with_exr.png](https://archive.blender.org/developer/F147355/bilateral_problem_2.73.9_with_exr.png) Worked with 2.73a ![bilateral_problem_2.73a.png](https://archive.blender.org/developer/F147357/bilateral_problem_2.73a.png) Steps for others to reproduce the error: - Open [building_ja12.blend](https://archive.blender.org/developer/F147359/building_ja12.blend) - Render - Make sure viewer node updates and disable 'use alpha' on it.
Author

Changed status to: 'Open'

Changed status to: 'Open'
Author

Added subscriber: @ja12

Added subscriber: @ja12

Added subscriber: @OliverBurn

Added subscriber: @OliverBurn

Added subscriber: @ideasman42

Added subscriber: @ideasman42

developer note:

This is caused by uninitialized memory reading greyscale AO buffer as an image buffer, when m_num_channels of the destination is greater then the m_input (see void WriteBufferOperation::executeRegion).

Either we should...

  • calloc all buffers/vectors
  • have read and readSample methods that take the array size as an argument and zero out what they cant fill in.
    ... or variations on this. currenly code does both but inconsistently.

This resolves one of the errors for BilateralBlur, but there are many other places this needs to be resovled.

P208: (An Untitled Masterwork)

--- a/source/blender/compositor/operations/COM_BilateralBlurOperation.cpp
+++ b/source/blender/compositor/operations/COM_BilateralBlurOperation.cpp
@@ -61,9 +61,14 @@ void BilateralBlurOperation::executePixel(float output- [x], int x, int y, void *d
 	int miny = floor(y - space);
 	int maxy = ceil(y + space);
 	float deltaColor;
-	this->m_inputDeterminatorProgram->read(determinatorReferenceColor, x, y, data);
 
+	zero_v4(determinatorReferenceColor);
+	zero_v4(determinator);
+	zero_v4(tempColor);
 	zero_v4(blurColor);
+
+	this->m_inputDeterminatorProgram->read(determinatorReferenceColor, x, y, data);
+
 	blurDivider = 0.0f;
 	for (int yi = miny; yi < maxy; yi += QualityStepHelper::getStep()) {
 		for (int xi = minx; xi < maxx; xi += QualityStepHelper::getStep()) {

developer note: This is caused by uninitialized memory reading greyscale AO buffer as an image buffer, when `m_num_channels` of the destination is greater then the `m_input` (see `void WriteBufferOperation::executeRegion`). Either we should... - calloc all buffers/vectors - have `read` and `readSample` methods that take the array size as an argument and zero out what they cant fill in. ... or variations on this. currenly code does both but inconsistently. This resolves one of the errors for BilateralBlur, but there are many other places this needs to be resovled. [P208: (An Untitled Masterwork)](https://archive.blender.org/developer/P208.txt) ```diff --- a/source/blender/compositor/operations/COM_BilateralBlurOperation.cpp +++ b/source/blender/compositor/operations/COM_BilateralBlurOperation.cpp @@ -61,9 +61,14 @@ void BilateralBlurOperation::executePixel(float output- [x], int x, int y, void *d int miny = floor(y - space); int maxy = ceil(y + space); float deltaColor; - this->m_inputDeterminatorProgram->read(determinatorReferenceColor, x, y, data); + zero_v4(determinatorReferenceColor); + zero_v4(determinator); + zero_v4(tempColor); zero_v4(blurColor); + + this->m_inputDeterminatorProgram->read(determinatorReferenceColor, x, y, data); + blurDivider = 0.0f; for (int yi = miny; yi < maxy; yi += QualityStepHelper::getStep()) { for (int xi = minx; xi < maxx; xi += QualityStepHelper::getStep()) { ```

This issue was referenced by 6e1ea04ada

This issue was referenced by 6e1ea04ada2a4f1bcc2ac2df1b1f411756582643

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'

Closed by commit 6e1ea04ada.

Closed by commit 6e1ea04ada.
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
5 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#43894
No description provided.